content/en/docs/01/resources/uptime-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-app
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: uptime-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: uptime-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - uptime-app
            topologyKey: "kubernetes.io/hostname"
      containers:
      - image: quay.io/acend/example-web-python
        name: uptime-app
        resources: 
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        ports:
          - name: http
            containerPort: 5000
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-app
spec:
  ports:
  - port: 5000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: uptime-app
